# dstu4145

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CppProperties.json  README.md  TODO.md  conanfile.py  conanfile.txt
.github/workflows/: ci.yml
cmake/: dstu4145Config.cmake.in
src/: CMakeLists.txt  arithmetic.cpp  domain_params.cpp  domain_params.h  ecurve.cpp  ecurve.h  engine.cpp  engine.h  gf2m.cpp  gf2m.h  gf2m_element.cpp  gf2m_element.h  integer.cpp  integer.h  is_container.h  key_pair.cpp  key_pair.h  main.cpp  polynomial.cpp  polynomial.h  rng.h  rng_interface.h  signer.cpp  signer.h  utils.h  verifier.cpp  verifier.h
test/: CMakeLists.txt  acceptance.cpp  arithmetic.cpp  dstu.cpp  ecurve.cpp  gf2m.cpp  integer.cpp  main.cpp  math.cpp  polynomial.cpp  test-util-test.cpp  test-util.cpp  test-util.h  test-utils-test.cpp  test-utils.cpp  test-utils.h  utils.cpp
